<resources>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="clock">clock</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change theme</string>
    <string name="default_username">Pombe User</string>
    <string name="default_time">1</string>
    <string name="hour">hour</string>

    <string name="home_icon">Home Icon</string>
    <string name="fav_icon">Favorite Icon</string>

    <string name="app_name">Pombe</string>
    <string name="title_home">Pombe</string>
    <string name="title_dashboard">About</string>
    <string name="theme">theme</string>
    <string name="everyday_is_cocktail_day">Everyday is Cocktail Day !!</string>
    <string name="search_cocktail">Search cocktail</string>
    <string name="recommended">Recommended</string>
    <string name="view_all">view all</string>
    <string name="recent">Recent</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="a_long_description_of_what_this_cocktail_is">A long description of what this cocktail is.</string>
    <string name="_100">100</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktailcategory">cocktailCategory</string>
    <string name="alcoholichdrink">alcoholichDrink</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="glass_type">Glass Type</string>
    <string name="hurricane_glass">Hurricane Glass</string>
    <string name="ing_1">Ing 1</string>
    <string name="butterflies_cock">Butterflies Cock</string>
    <string name="cocktail_image">Cocktail Image</string>
    <string name="butterfly_something">Butterfly something</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>