<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="result"
            type="com.maku.pombe.data.models.recent.Drink" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.recent.RecentBottomSheetFragment">


                <ImageView
                    android:id="@+id/main_imageView"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/cocktail_image" />

                <View
                    android:id="@+id/gradient_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="@drawable/gradient_overlay"
                    app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
                    app:layout_constraintEnd_toEndOf="@+id/main_imageView"
                    app:layout_constraintStart_toStartOf="@+id/main_imageView"
                    app:layout_constraintTop_toTopOf="@+id/main_imageView"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/recentTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/butterflies_cock"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

                <TextView
                    android:id="@+id/srtAlcoholic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/alcoholichdrink"
                    app:layout_constraintEnd_toStartOf="@+id/strCategory"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recentTitle" />

                <TextView
                    android:id="@+id/strCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cocktailcategory"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/srtAlcoholic"
                    app:layout_constraintTop_toBottomOf="@+id/recentTitle" />

                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/instructions"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/srtAlcoholic" />

                <TextView
                    android:id="@+id/instructionsResult"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/instructions"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/instructions"
                    app:layout_constraintTop_toBottomOf="@+id/instructions" />

                <TextView
                    android:id="@+id/ing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/instructionsResult"
                    app:layout_constraintStart_toStartOf="@+id/instructionsResult"
                    app:layout_constraintTop_toBottomOf="@+id/instructionsResult" />

                <TextView
                    android:id="@+id/ingone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/ing_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/ing"
                    app:layout_constraintTop_toBottomOf="@+id/ing" />

                <TextView
                    android:id="@+id/ingtwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ing_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ingone"
                    app:layout_constraintTop_toBottomOf="@+id/ingone" />

                <TextView
                    android:id="@+id/ingthree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ing_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ingtwo"
                    app:layout_constraintTop_toBottomOf="@+id/ingtwo" />

                <TextView
                    android:id="@+id/ingFour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ing_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ingthree"
                    app:layout_constraintTop_toBottomOf="@+id/ingthree" />

                <TextView
                    android:id="@+id/glasstype"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/glass_type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ingFour"
                    app:layout_constraintTop_toBottomOf="@+id/ingFour" />

                <TextView
                    android:id="@+id/glass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/hurricane_glass"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/glasstype"
                    app:layout_constraintTop_toBottomOf="@+id/glasstype" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>